Created login page and registration page

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=25aca9fa8748efd093488c6a80fccaf9
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://90ab812c55912b:eec3889d5c9d91@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
