--- a/.env
+++ b/.env
@@ -30,3 +30,7 @@ MAILER_DSN=smtp://90ab812c55912b:eec3889d5c9d91@smtp.mailtrap.io:2525?encryption
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL="postgresql://rc_super_admin:rc1234@127.0.0.1:5432/ranked_choice_2?serverVersion=12.5&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
