--- a/package.json
+++ b/package.json
@@ -20,10 +20,16 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
+        "axios": "0.21.1",
         "bootstrap": "^4.3.1",
         "chart.js": "2.9.4",
+        "http-status-codes": "2.1.4",
         "jquery": "3.5.1",
         "jquery.easing": "1.4.1",
-        "popper.js": "1.16.1"
+        "popper.js": "1.16.1",
+        "vue": "2.6.12",
+        "vue-loader": "15.9.6",
+        "vue-template-compiler": "2.6.12",
+        "vuex": "3.6.2"
     }
 }
