1. Created recovery password form; 2. Added authorization via google; 3. Added authorization via facebook; 4. Changed the command for adding a user;

--- a/.env
+++ b/.env
@@ -34,3 +34,9 @@ DATABASE_URL="postgresql://rc_super_admin:rc1234@127.0.0.1:5432/ranked_choice_2?
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+OAUTH_FACEBOOK_ID=903660530396711
+OAUTH_FACEBOOK_SECRET=a0b9d4e903eab2b519cdc9464e810189
+
+OAUTH_GOOGLE_CLIENT_ID=912337966865-v2c1poe1qvbifoj4ioj4stoijvvdj932.apps.googleusercontent.com
+OAUTH_GOOGLE_CLIENT_SECRET=3h226eQTg32jHEfabO_oxeKU
