--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.9",
         "imagine/imagine": "1.2",
+        "knpuniversity/oauth2-client-bundle": "2.7",
+        "league/oauth2-facebook": "^2.0",
+        "league/oauth2-google": "^4.0",
         "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^5.1",
@@ -46,6 +49,7 @@
         "symfony/web-link": "5.2.*",
         "symfony/webpack-encore-bundle": "^1.11",
         "symfony/yaml": "5.2.*",
+        "symfonycasts/reset-password-bundle": "1.8",
         "symfonycasts/verify-email-bundle": "^1.5",
         "twig/cssinliner-extra": "3.3",
         "twig/extra-bundle": "^2.12|^3.0",
