--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -63,5 +63,5 @@ security:
         - { path: ^/admin/login }
         - { path: ^/admin/user, roles: ROLE_SUPER_ADMIN }
         - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/%app_locales.in_brackets%/profile, roles: ROLE_USER }
         # - { path: ^/profile, roles: ROLE_USER }
