--- a/.env
+++ b/.env
@@ -40,3 +40,13 @@ OAUTH_FACEBOOK_SECRET=a0b9d4e903eab2b519cdc9464e810189
 
 OAUTH_GOOGLE_CLIENT_ID=912337966865-v2c1poe1qvbifoj4ioj4stoijvvdj932.apps.googleusercontent.com
 OAUTH_GOOGLE_CLIENT_SECRET=3h226eQTg32jHEfabO_oxeKU
+
+###> symfony/messenger ###
+# Choose one of the transports below
+MESSENGER_TRANSPORT_DSN=doctrine://default
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
+
+SITE_BASE_SCHEME=https
+SITE_BASE_HOST=127.0.0.1:8000
