--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,11 @@
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.9",
         "imagine/imagine": "1.2",
+        "knplabs/knp-paginator-bundle": "^5.6",
         "knpuniversity/oauth2-client-bundle": "2.7",
         "league/oauth2-facebook": "^2.0",
         "league/oauth2-google": "^4.0",
+        "lexik/form-filter-bundle": "^6.1",
         "nelmio/cors-bundle": "^2.1",
         "php-translation/symfony-bundle": "^0.12.1",
         "phpdocumentor/reflection-docblock": "^5.2",
