--- a/composer.json
+++ b/composer.json
@@ -64,7 +64,9 @@
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.6",
         "dbrekelmans/bdi": "^0.3.0",
+        "friendsofphp/php-cs-fixer": "^3.0",
         "hautelook/alice-bundle": "^2.9",
+        "phpstan/phpstan": "^0.12.90",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "^5.2",
         "symfony/css-selector": "^5.2",
