--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
         "@symfony/stimulus-bridge": "^2.0.0",
         "@symfony/webpack-encore": "^1.0.0",
         "core-js": "^3.0.0",
+        "eslint": "^7.29.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^3.4.0",
+        "eslint-plugin-vue": "^7.12.1",
         "file-loader": "^6.0.0",
         "regenerator-runtime": "^0.13.2",
         "sass": "^1.32.0",
