--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
 
       - run:
           name: "Install npm 7.15.0"
-          command: npm install -g npm@7.15.0
+          command: sudo npm install -g npm@7.15.0
 
       - run:
           name: "Install dependencies"
