--- a/.env.test
+++ b/.env.test
@@ -12,3 +12,4 @@ DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 
 SITE_BASE_SCHEME=https
 SITE_BASE_HOST=127.0.0.1:8000
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
