--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /public/uploads/
-/public/build/
+#/public/build/
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
@@ -20,7 +20,7 @@
 
 ###> symfony/webpack-encore-bundle ###
 /node_modules/
-/public/build/
+#/public/build/
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
