Fixes of guards for Symfony 5.3

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,4 +1,6 @@
 security:
+    enable_authenticator_manager: true
+
     encoders:
         App\Entity\User:
             algorithm: auto
@@ -16,34 +18,31 @@ security:
             security: false
         admin_secured_area:
             pattern: ^/admin
-            anonymous: true
             lazy: true
             provider: app_user_provider
-            guard:
-                authenticators:
-                    - App\Security\Authenticator\Admin\LoginFormAuthenticator
+            custom_authenticators:
+                - App\Security\Authenticator\Admin\LoginFormAuthenticator
             remember_me:
                 secret: '%kernel.secret%'
                 lifetime: 684800
                 path: /admin/
             logout:
                 path: admin_security_logout
+                target: admin_security_login
         main:
-            anonymous: true
             lazy: true
             provider: app_user_provider
-            guard:
-                authenticators:
-                    - App\Security\Authenticator\Main\LoginFormAuthenticator
-                    - App\Security\Authenticator\Main\FacebookAuthenticator
-                    - App\Security\Authenticator\Main\GoogleAuthenticator
-                entry_point: App\Security\Authenticator\Main\LoginFormAuthenticator
+            custom_authenticators:
+                - App\Security\Authenticator\Main\LoginFormAuthenticator
+                - App\Security\Authenticator\Main\FacebookAuthenticator
+                - App\Security\Authenticator\Main\GoogleAuthenticator
             remember_me:
                 secret: '%kernel.secret%'
                 lifetime: 604800 # 1 week
                 path: /
             logout:
                 path: main_logout
+                target: main_login
                 # where to redirect after logout
                 # target: app_any_route
 
