Redirect user to login form if happend event Access Denied

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,6 +19,8 @@ security:
             anonymous: true
             lazy: true
             provider: app_user_provider
+            access_denied_handler: App\Security\Handler\AccessAdminDeniedHandler
+            entry_point: App\Security\EntryPoint\AuthenticationAdminEntryPoint
             guard:
                 authenticators:
                     - App\Security\Authenticator\Admin\LoginFormAuthenticator
@@ -32,12 +34,13 @@ security:
             anonymous: true
             lazy: true
             provider: app_user_provider
+            access_denied_handler: App\Security\Handler\AccessMainDeniedHandler
+            entry_point: App\Security\EntryPoint\AuthenticationMainEntryPoint
             guard:
                 authenticators:
                     - App\Security\Authenticator\Main\LoginFormAuthenticator
                     - App\Security\Authenticator\Main\FacebookAuthenticator
                     - App\Security\Authenticator\Main\GoogleAuthenticator
-                entry_point: App\Security\Authenticator\Main\LoginFormAuthenticator
             remember_me:
                 secret: '%kernel.secret%'
                 lifetime: 604800 # 1 week
